# Arbitrage-Opportunities-in-Cryptocurrencies-

./: .gitignore  README.md  main.py
data_cleanup/: cleanup.1  cleanup.1.save  cleanup.py  data_correction.ipynb
data_cleanup/.ipynb_checkpoints/: data_correction-checkpoint.ipynb
data_collection/: getbook.1  getbook.1.save  getbook.py  main.py  relevant_symbols
selection/: Arbitrage.cpp  Arbitrage.h  BTCLTCBCH0  CMakeLists.txt  CurrencyPair.cpp  CurrencyPair.h  FilesManager.cpp  FilesManager.h  OutputFormat.cpp  OutputFormat.h  README.md  Selection.ipynb  Triplet.cpp  Triplet.h  Untitled.ipynb  ft.1  ft.c  main.cpp  makefile  selection.1
selection/.ipynb_checkpoints/: Selection-checkpoint.ipynb  Untitled-checkpoint.ipynb
selection_C++/: Arbitrage.cpp  Arbitrage.h  CMakeLists.txt  CurrencyPair.cpp  CurrencyPair.h  FilesManager.cpp  FilesManager.h  OutputFormat.cpp  Triplet.cpp  Triplet.h  main.cpp  pokus
statistics/: .~statistics.ipynb  README.md  USDTEOSBNB-2020-03-12_check.txt  statistics.ipynb  table.tex
statistics/.ipynb_checkpoints/: check-checkpoint.ipynb  statistics-checkpoint.ipynb
statistics/output_files/: USDTBCHBNB.tex  USDTBNBXMR.tex  USDTBTCBCH.tex  USDTBTCBNB.tex  USDTBTCEOS.tex  USDTBTCETH.tex  USDTBTCLTC.tex  USDTBTCTRX.tex  (+12 more)
teorie/: Arbitrazni_prilezitosti_kryptomen.tex  DP_Priklad.tex  MastersThesis_example.tex  Sablona_BP_UTF-8.tex  Sablona_BP_Windows-1250.tex  mybibliographyfile.bib
theory/: Arbitrazni_prilezitosti_kryptomen.tex  FITthesis.cls
thesis/: Arbitrazni_prilezitosti_kryptomen.tex  FITthesis.cls  mybibliographyfile.bib
(+2973 files in other folders)
